# BraveStarr

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  run_mcp.sh  schema.sql  start.sh  test-docker.sh  web_server.py
docs/: architecture.md  spec.md
skill/: SKILL.md
src/brave_starr/: __init__.py  database.py  models.py  server.py
templates/: base.html  index.html  ranking.html  trends.html
tests/: test_database.py  test_models.py  test_server.py
