[project]
name = "brave-starr"
version = "0.1.0"
description = "微信指数记录和查询服务 - FastMCP 实现"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "BraveStarr Team" }
]
dependencies = [
    "fastmcp>=2.0.0",
    "sqlmodel>=0.0.14",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
brave-starr = "brave_starr.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/brave_starr"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
